# LotsOfCells

./: .gitignore  DESCRIPTION  NAMESPACE  example.py  pyproject.toml  readme.md  test_pdf_and_oneclass.py  test_plots.py
.github/workflows/: publish.yml
R/: bar_chart.R  cellToMontecarlo.R  density_chart.R  entropyScore.R  lotOfCells.R  lotsOfCells.R  polar_chart.R  waffleChart.R
examples/: simulation_bounded_fc.py  simulation_calibration.py  simulation_permutation_bounded_fc.py
examples/simulation_output_calibration/: calibration_reference_table.csv
lotsofcells/: __init__.py  _parallel.py  _stats.py  _utils.py  entropy.py  gene_source.py  lotsofcells.py  plots.py
man/: density_chart.Rd  lotsOfCells.Rd  polar_chart.Rd  waffle_chart.Rd
