[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lotsofcells"
dynamic = ["version"]
description = "Python port of lotsOfCells: proportion-test statistics and visualization on single-cell metadata. Compatible with scanpy/AnnData and spatial transcriptomics."
readme = "README.md"
authors = [
    { name = "Oscar Gonzalez-Velasco" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "anndata>=0.9",
    "joblib>=1.2",
]

[project.optional-dependencies]
scanpy = ["scanpy>=1.9"]
spatial = ["spatialdata>=0.1"]
mudata = ["mudata>=0.2"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lotsofcells*"]

# setuptools-scm reads the version from the latest git tag.
# The section MUST exist (even if empty) — otherwise setuptools-scm stays
# dormant and the build falls back to "0.0.0". Tags must be like "v0.4.0".
[tool.setuptools_scm]
